Added one reference

--- a/documentation/refs.bib
+++ b/documentation/refs.bib
@@ -2,7 +2,7 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Giuseppe Durisi at 2014-12-09 15:08:07 +0100 
+%% Created for Wei Yang at 2014-12-19 14:02:32 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -18,6 +18,20 @@
 
 @string{j_ppi = {Prob. Peredachi Inform.}}
 
+
+@article{yang14-07a,
+	Author = {Yang, W. and Durisi, G. and Koch, T. and Polyanskiy, Y.},
+	Date-Added = {2014-12-19 13:01:53 +0000},
+	Date-Modified = {2014-12-19 13:01:53 +0000},
+	Journal = IEEE_J_IT,
+	Month = Jul,
+	Number = {7},
+	Owner = {ywei},
+	Pages = {4232--4265},
+	Timestamp = {2013.11.11},
+	Title = {Quasi-Static Multiple-Antenna fading channels at finite blocklength},
+	Volume = {60},
+	Year = {2014}}
 
 @article{durisi14-12a,
 	Author = {Giuseppe Durisi and Tobias Koch and Johan \"{O}stman and Yury Polyanskiy and Wei Yang},
