manual: fixed typo in the abstract

--- a/documentation/manual.tex
+++ b/documentation/manual.tex
@@ -67,7 +67,7 @@ Giuseppe Durisi, Johan \"Ostman, Yury Polyanskiy, Wei Yang}
 
 Shannon theory describes fundamental limits of communication and
 compression systems. Classic closed-form results
-(such as the well known $log(1+\mathrm{SNR})$ formula)   apply only to the regime of infinite blocklength
+(such as the well known $\log(1+\mathrm{SNR})$ formula)   apply only to the regime of infinite blocklength
 (infinite packet size/delay). For finite blocklengths, no closed-form results are usually
 obtainable, but there  exist tight upper and lower bounds, as well as
 approximations. This manual describes numerical routines for  computing
