Added mailing-list email to manual and README.md

--- a/documentation/manual.tex
+++ b/documentation/manual.tex
@@ -58,7 +58,10 @@ Short Packet Communication Toolbox\\[1cm]
 Version 0.1}
 
 \author{Contributors (alphabetic order):\\
-Giuseppe Durisi, Johan \"Ostman, Yury Polyanskiy, Ido Tal, Wei Yang}
+Giuseppe Durisi, Johan \"Ostman, Yury Polyanskiy, Ido Tal, Wei Yang\\[10pt]
+e-mail: \url{fblcode-list@mit.edu}}
+
+
 
 
 \maketitle
