reference [3] updated after submission

--- a/documentation/refs.bib
+++ b/documentation/refs.bib
@@ -2,7 +2,7 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Wei Yang at 2014-12-19 14:02:32 +0100 
+%% Created for Giuseppe Durisi at 2014-12-25 18:08:30 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -36,11 +36,13 @@
 @article{durisi14-12a,
 	Author = {Giuseppe Durisi and Tobias Koch and Johan \"{O}stman and Yury Polyanskiy and Wei Yang},
 	Date-Added = {2014-12-09 14:07:56 +0000},
-	Date-Modified = {2014-12-09 14:07:56 +0000},
+	Date-Modified = {2014-12-25 17:08:30 +0000},
+	Journal = {{IEEE} Trans. Commun.},
 	Keywords = {giuseppe},
 	Month = dec,
-	Note = {in preparation},
+	Note = {submitted for publication},
 	Title = {Short-Packet Communications with Multiple Antennas: Transmit Diversity, Spatial Multiplexing, and Channel Estimation Overhead},
+	Url = {http://arxiv.org/abs/1412.7512},
 	Year = {2014}}
 
 @article{PPV08,
