refs.bib updated

--- a/documentation/refs.bib
+++ b/documentation/refs.bib
@@ -2,7 +2,7 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Giuseppe Durisi at 2014-12-25 18:08:30 +0100 
+%% Created for Giuseppe Durisi at 2014-12-27 22:02:17 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -36,14 +36,13 @@
 @article{durisi14-12a,
 	Author = {Giuseppe Durisi and Tobias Koch and Johan \"{O}stman and Yury Polyanskiy and Wei Yang},
 	Date-Added = {2014-12-09 14:07:56 +0000},
-	Date-Modified = {2014-12-25 17:08:30 +0000},
-	Journal = {{IEEE} Trans. Commun.},
+	Date-Modified = {2014-12-27 21:02:07 +0000},
 	Keywords = {giuseppe},
 	Month = dec,
-	Note = {submitted for publication},
 	Title = {Short-Packet Communications with Multiple Antennas: Transmit Diversity, Spatial Multiplexing, and Channel Estimation Overhead},
 	Url = {http://arxiv.org/abs/1412.7512},
-	Year = {2014}}
+	Year = {2014},
+	Bdsk-Url-1 = {http://arxiv.org/abs/1412.7512}}
 
 @article{PPV08,
 	Author = {Y. Polyanskiy and H.~V.~Poor and Sergio Verd\'u},
